--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:name=".common.Application.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/digitalvision"
+        android:icon="@mipmap/oko_crno"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
